refactor class names

--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
 	<meta charset="UTF-8">
 	<title>ToDo</title>
 	<link rel="stylesheet" href="	styles.css">
+	<link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
 </head>
 <body>
+	<button class="button__return button__return-hidden">Return to full view</button>
 	<div class="sections">
-		<div class="timeline">Timeline</div>
-		<div class="goals">Goals</div>
-		<div class="actionitems">Action Items</div>
+		<div class="section__timeline">Timeline</div>
+		<div class="section__goals">Goals</div>
+		<div class="section__actionitems">Action Items</div>
 	</div>
 	<script src="scripts.js">	</script>
 </body>
